tests/errors/syntax.MissingClosingBracket.res
══╡ Syntax Error ╞════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Unable to parse input code

  Issue found when trying to parse:
      Block
  
  Missing:
      closing square bracket (`]`)

  ┃ File: tests/errors/syntax.MissingClosingBracket.art
  ┃ Line: 2
  ┃ 
  ┃    1 ║  print "done"
  ┃    2 ║► print [
  ┃    3 ║      this
  ┃    4 ║      is